--- a/package.json
+++ b/package.json
@@ -78,9 +78,7 @@
     "serve-favicon": "^2.0.0",
     "swig": "^1.3.2",
     "time-grunt": "^0.3.1",
-    "view-helpers": "^0.1.4"
-  },
-  "devDependencies": {
+    "view-helpers": "^0.1.4",
     "grunt-karma": "^0.8.2",
     "grunt-mocha-test": "^0.10.2",
     "karma": "^0.12.10",
@@ -99,5 +97,8 @@
     "requirejs": "^2.1.11",
     "should": "3.3.1",
     "supertest": "0.11.0"
+  },
+  "devDependencies": {
+    
   }
 }
