Initial commit for fitbit oauth. Also fixed a redirect bug.

--- a/.jshintrc
+++ b/.jshintrc
@@ -86,6 +86,7 @@
       "inject"      : false,
       "expect"      : false,
       "spyOn"       : false,
-      "sys"         : false
+      "sys"         : false,
+      "passport"    : false
     }
 }
