--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "passport-http-bearer": "latest",
     "passport-oauth2-client-password": "latest",
     "oauth2orize": "latest",
-    "debug": "~0.7.2"
+    "debug": "~0.7.2",
+    "passport-fitbit": "~0.1.2"
   },
   "devDependencies": {
     
